--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button data-video-id="avZCF1iY91A">Dua that will stop Negative thoughts</button>
         <button data-video-id="MrVQn2FK1KI">Ruqaya for Glowing Skin</button>
         <button data-video-id="QbReg0wD_GM">Dua for Memorization & Knowledge</button>
-        <button data-video-id="e_zk_muIweQ">Quranic Cure for Porn Addiction</button>
+        <button data-video-id="e_zk_muIweQ">Overcoming Desire</button>
         <button data-video-id="aegm3hINoCU">Dua for getting married & Righteous Child</button>
         <button data-video-id="Y7UPCihaIew">Dua to improve your eyesight & hearing</button>
         <button data-video-id="9FdyZbEMmsU">Dua ayub as for incurable diseases</button>
@@ -62,3 +62,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
